--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    W,A,S,D controls, e to hyperspace
+		    W,A,S,D controls, e to hyperspace, space to shoot
 	    </footer>
 	</body>
 </html>
